# ArtEvoke

./: .gitignore  .gitmodules  README.md
.legacy/Museum/: input_data_museum.py
deployment/: QUICKSTART.md  README.md  SECRETS_SETUP.md
deployment/scripts/: fast-deploy.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
deployment/terraform_br/: terraform.tfvars.example  use-credentials.sh
pipeline/: README.md  requirements.txt
pipeline/data/: README.md
pipeline/scripts/: README.md
project_assets/data/: README.md  (+1 more)
tests/: README.md
webapp/: .gitignore  LICENSE  README.md  docker-compose.mac.yml  docker-compose.yml  package-lock.json  package.json
webapp/FastAPI/: .dockerignore  Dockerfile  Dockerfile.mac  Dockerfile.prod  README.md  database.py  database_config.py  docker-compose.yml  main.py  models.py  orm_examples.py  pyproject.toml  requirements-mac.txt  requirements.txt  verify_orm.py
webapp/FastAPI/api_types/: __init__.py  art.py  art_exploration.py  common.py  evaluation.py  memory_reconstruction.py  patient.py  session.py  user.py
webapp/FastAPI/clients/: __init__.py  database_client.py  embedding_client.py  maritaca_client.py  qdrant_client.py
webapp/FastAPI/orm/: __init__.py  ae_question_models.py  art_exploration_models.py  base.py  catalog_models.py  evaluation_models.py  memory_reconstruction_models.py  mr_question_models.py  session_models.py  user_models.py
webapp/FastAPI/prompts/: ae_prompt_en.md  ae_prompt_pt.md  mr_prompt_en.md  mr_prompt_pt.md  speech_correct_text_en.md  speech_correct_text_pt.md  story_prompt_en.md  story_prompt_pt.md  vr_correct_text.md
webapp/FastAPI/routes/: __init__.py  art_exploration.py  art_routes.py  doctor_routes.py  evaluation.py  evaluation_routes.py  memory_reconstruction.py  patient_routes.py  session_routes.py  user_routes.py  vr_routes.py
webapp/FastAPI/utils/: auth.py  embeddings.py  spell_check.py  text_correction.py  text_processing.py  types.py
(+287 files in other folders)
