[project]
name = "artevoke-backend"
version = "0.1.0"
description = "ArtEvoke FastAPI backend service"
requires-python = ">=3.10"
dependencies = [
    # Core Web Framework
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    
    # Database
    "motor==3.7.0",
    "pymongo==4.11.2",
    
    # Authentication & Security
    "passlib==1.7.4",
    "python-jose==3.4.0",
    "bcrypt==4.3.0",
    "cryptography==44.0.2",
    
    # ML & AI Models
    "transformers==4.57.1",
    "sentence-transformers==4.1.0",
    
    # Vector Search
    "faiss-gpu-cu12==1.12.0",
    
    # Data Processing
    "pandas==2.2.3",
    "numpy==1.26.4",
    "openai==1.58.1",
    
    # Utilities
    "requests==2.32.3",
    "tqdm==4.67.1",
    "accelerate==1.6.0",
    "bitsandbytes==0.45.4",
    
    # NLP & Translation
    "language_tool_python==2.9.3",
    "deep-translator==1.11.4",
    
    # Pydantic for validation
    "pydantic==2.10.6",
]

[tool.uv]
package = false
