[project]
name = "artevoke-backend"
version = "0.1.0"
description = "ArtEvoke FastAPI backend service"
requires-python = ">=3.10"
dependencies = [
    # Core Web Framework
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    
    # Database - SQLAlchemy & MySQL
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "alembic==1.14.0",
    
    # Authentication & Security
    "passlib[bcrypt]==1.7.4",
    "python-jose==3.4.0",
    "bcrypt==4.0.1",
    "cryptography==44.0.2",
    
    # Vector Search
    "qdrant-client==1.15.1",
    
    # Data Processing
    "openai==1.58.1",
    
    # NLP & Translation
    "language-tool-python==3.1.0",
    
    # Pydantic for validation
    "pydantic==2.10.6"
]

[tool.uv]
package = false
